--- a/rintesfront/public/index.html
+++ b/rintesfront/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Tudo em suas Mãos"
-      content="Tudo em suas Mãos"
+      name="Seu carro, seu controle. Compre, acompanhe e confie."
+      content="Seu carro, seu controle. Compre, acompanhe e confie."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/zoom-logo.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nhiquela+ - Tudo em suas mãos</title>
+    <title>Rintes - O seu melhor site de compra de viaturas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
